fix: docs naming
